# damastes

./: .gitignore  .pre-commit-config.yaml  Archfile  BUILDME.rst  DOCKERME.rst  Dockerfile  Procrustesfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
procr/core/: pcp.py
py_procr/: pcp.py
src/damastes/: __init__.py  main.py  run.py  shoot.py
src/procrustes/: procrustes.py  run.py
tests/: runner.py  test_common.py  test_damastes.py  test_procrustes.py  test_py_procr.py
