[tool.poetry]
name = "damastes"
version = "0.9.5"
description = "Damastes a.k.a. Procrustes, audiobook builder: copy and edit on the fly"
authors = ["Tyrn <a@b.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Tyrn/damastes"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.44"
yaspin = "^2.1.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^1.0.1"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.poetry.scripts]
damastes = "damastes.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

