[tool.poetry]
name = "damastes"
version = "0.9.5"
description = "Damastes a.k.a. Procrustes, audiobook builder: copy and edit on the fly"
authors = ["Tyrn <a@b.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Tyrn/damastes"

[tool.poetry.dependencies]
python = "^3.11"
mutagen = "^1.46"
yaspin = "^2.3.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
mypy = "^1.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
damastes = "damastes.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

