[tool.poetry]
name = "damastes"
version = "0.9.5"
description = "Damastes a.k.a. Procrustes, audiobook builder: copy and edit on the fly"
authors = ["Tyrn <a@b.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Tyrn/damastes"

[tool.poetry.dependencies]
python = "^3.13"
mutagen = "^1.46"
yaspin = "^2.3.0"
click = "^8.1.3"

[tool.poetry.scripts]
damastes = "damastes.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
mypy = "^1.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pyright = "^1.1.314"
virtualenvwrapper = "^4.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
